--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -204,11 +204,8 @@ button:after {
 
 .clock {
     width: 40%;
-    /* border: 1px solid blue; */
     display: flex;
     justify-content: space-around;
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
 .clock p {
@@ -217,7 +214,45 @@ button:after {
     font-family: "Arial", sans-serif;
 }
 
-@media screen and (min-width: 250px) and (max-width: 600px) {
+@media screen and (min-width: 279px) and (max-width: 767px) {
+    .user_parent{
+        width: 90%;
+        font-size: 1em;
+        color: red;
+    }
+
+    .user_parent .userLink{
+        padding: 0.9em 1em;
+        font-size: .8em;
+    }
+    
+    .upper_card{
+        width: 95%;
+        display: flex;
+    }
+    
+    .clockSection{
+        width: 100%;
+    }
+    .profile_container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .country-selector {
+        width: 100%;
+        /* border: 1px solid green; */
+        display: flex;
+        flex-direction: column;
+        /* margin: auto; */
+    }
+
+    .clock{
+        width: 100%;
+        margin-top: 1em;
+        /* border: 1px solid red; */
+    }
     .container {
         margin: 0px 20px;
     }
@@ -230,7 +265,50 @@ button:after {
     }
 }
 
-@media screen and (min-width: 600px) and (max-width: 900px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        margin: 0px 20px;
+    }
+
+    .user_parent .userLink{
+        padding: 0.9em 1em;
+        font-size: .8em;
+    }
+    
+    .clock{
+        width: 100%;
+        margin-top: 1em;
+    }
+
+    .user_parent .userLink{
+        padding: 0.9em 1em;
+        font-size: .8em;
+    }
+    
+    .upper_card{
+        width: 95%;
+        display: flex;
+    }
+    
+    .clockSection{
+        width: 100%;
+    }
+    .profile_container{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .country-selector {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .clock{
+        width: 100%;
+        margin-top: 1em;
+    }
     .container {
         margin: 0px 20px;
     }
